--- a/explore.html
+++ b/explore.html
@@ -244,80 +244,6 @@
 
   <!-- Mobile Navigation JavaScript hai -->
   <script src="public/js/navigation.js"></script>
-    <script>
-      // Check authentication on page load
-      document.addEventListener('DOMContentLoaded', function() {
-        const isLoggedIn = localStorage.getItem('isLoggedIn');
-        const userEmail = localStorage.getItem('userEmail');
-        
-        if (!isLoggedIn) {
-          window.location.href = 'login.html';
-          return;
-        }
-        
-        // Display user email in navbar
-        if (userEmail) {
-          document.getElementById('userEmail').textContent = userEmail;
-          document.getElementById('userEmail').classList.remove('hidden');
-        }
-      });
-
-      // Logout functionality
-      function logout() {
-        localStorage.removeItem('isLoggedIn');
-        localStorage.removeItem('userEmail');
-        window.location.href = 'login.html';
-      }
-
-      document.getElementById('logoutBtn').addEventListener('click', logout);
-      document.getElementById('mobileLogoutBtn').addEventListener('click', logout);
-
-      // Mobile menu toggle functionality
-      const mobileMenuToggle = document.getElementById("mobile-menu-toggle");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      mobileMenuToggle.addEventListener("click", function() {
-        if (mobileMenu.classList.contains("hidden")) {
-          // Show menu
-          mobileMenu.classList.remove("hidden");
-          setTimeout(() => {
-            mobileMenu.classList.remove("opacity-0", "-translate-y-5");
-            mobileMenu.classList.add("opacity-100", "translate-y-0");
-          }, 10);
-        } else {
-          // Hide menu
-          mobileMenu.classList.remove("opacity-100", "translate-y-0");
-          mobileMenu.classList.add("opacity-0", "-translate-y-5");
-          setTimeout(() => {
-            mobileMenu.classList.add("hidden");
-          }, 200);
-        }
-      });
-
-      // Close mobile menu when clicking outside
-      document.addEventListener("click", function(e) {
-        if (!mobileMenuToggle.contains(e.target) && !mobileMenu.contains(e.target)) {
-          if (!mobileMenu.classList.contains("hidden")) {
-            mobileMenu.classList.remove("opacity-100", "translate-y-0");
-            mobileMenu.classList.add("opacity-0", "-translate-y-5");
-            setTimeout(() => {
-              mobileMenu.classList.add("hidden");
-            }, 200);
-          }
-        }
-      });
-
-      // Close mobile menu when clicking on a link
-      const mobileMenuLinks = mobileMenu.querySelectorAll("a");
-      mobileMenuLinks.forEach(link => {
-        link.addEventListener("click", function() {
-          mobileMenu.classList.remove("opacity-100", "translate-y-0");
-          mobileMenu.classList.add("opacity-0", "-translate-y-5");
-          setTimeout(() => {
-            mobileMenu.classList.add("hidden");
-          }, 200);
-        });
-      });
-    </script>
+  <script src="script.js"></script>
   </body>
 </html>
