--- a/profile.html
+++ b/profile.html
@@ -95,10 +95,10 @@
             class="h-32 w-32 rounded-full object-cover border-4 border-white"
           />
           <div class="text-center md:text-left">
-            <h1 class="text-3xl font-bold text-white mb-2">
-              Harshrajsinh Zala
+            <h1 id="profileName" class="text-3xl font-bold text-white mb-2">
+              Loading...
             </h1>
-            <p class="text-white/90">
+            <p id="profileDescription" class="text-white/90">
               Passionate about discovering India's vibrant culture and hidden
               gems.
             </p>
@@ -319,6 +319,31 @@
     </footer>
 
   <!-- Mobile Navigation JavaScript hai -->
+  <script src="users.js"></script>
   <script src="public/js/navigation.js"></script>
+  <script>
+    // Load and display user profile information
+    document.addEventListener('DOMContentLoaded', () => {
+      const userEmail = localStorage.getItem('userEmail');
+      const userName = localStorage.getItem('userName');
+      
+      if (userEmail && userName) {
+        // Update profile name in header
+        const profileNameElement = document.getElementById('profileName');
+        if (profileNameElement) {
+          profileNameElement.textContent = userName;
+        }
+        
+        // Update profile description to include user's email
+        const profileDescriptionElement = document.getElementById('profileDescription');
+        if (profileDescriptionElement) {
+          profileDescriptionElement.textContent = `Travel enthusiast sharing adventures from ${userEmail}`;
+        }
+      } else {
+        // If no user data found, redirect to login
+        window.location.href = 'login.html';
+      }
+    });
+  </script>
   </body>
 </html>
