--- a/about.html
+++ b/about.html
@@ -144,30 +144,27 @@
   <!-- Team Section hai -->
     <section class="container mx-auto px-4 py-16">
       <h2 class="text-3xl font-bold mb-12 text-center">Meet Our Founders</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-12 max-w-4xl mx-auto">
-        <div class="text-center">
-          <img
-            src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=2574&auto=format&fit=crop"
-            alt="Harshrajsinh Zala"
-            class="w-48 h-48 rounded-full mx-auto mb-4 object-cover border-4 border-orange-500"
-          />
-          <h3 class="font-bold text-xl mb-2">Harshrajsinh Zala</h3>
-          <p class="text-orange-600 font-medium mb-3">Co-Founder & Tech Lead</p>
-          <p class="text-gray-600 text-sm">
-            Passionate about technology and travel, Harshrajsinh brings the technical vision to life, creating seamless digital experiences for travelers across India.
-          </p>
-        </div>
-        <div class="text-center">
-          <img
-            src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=2576&auto=format&fit=crop"
-            alt="Sanchita Jindal"
-            class="w-48 h-48 rounded-full mx-auto mb-4 object-cover border-4 border-orange-500"
-          />
-          <h3 class="font-bold text-xl mb-2">Sanchita Jindal</h3>
-          <p class="text-orange-600 font-medium mb-3">Co-Founder & Creative Director</p>
-          <p class="text-gray-600 text-sm">
-            With a keen eye for storytelling and design, Sanchita crafts compelling narratives that inspire travelers to explore India's diverse cultural heritage.
-          </p>
+      <div class="max-w-4xl mx-auto flex flex-col items-center">
+        <img
+          src="./public/images/together.PNG"
+          alt="Harshrajsinh Zala & Sanchita Jindal"
+          class="w-64 h-64 rounded-full mx-auto mb-6 object-cover border-4 border-orange-500"
+        />
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-12 w-full">
+          <div class="text-center">
+            <h3 class="font-bold text-xl mb-2">Harshrajsinh Zala</h3>
+            <p class="text-orange-600 font-medium mb-3">Co-Founder & Tech Lead</p>
+            <p class="text-gray-600 text-sm">
+              Passionate about technology and travel, Harshrajsinh brings the technical vision to life, creating seamless digital experiences for travelers across India.
+            </p>
+          </div>
+          <div class="text-center">
+            <h3 class="font-bold text-xl mb-2">Sanchita Jindal</h3>
+            <p class="text-orange-600 font-medium mb-3">Co-Founder & Creative Director</p>
+            <p class="text-gray-600 text-sm">
+              With a keen eye for storytelling and design, Sanchita crafts compelling narratives that inspire travelers to explore India's diverse cultural heritage.
+            </p>
+          </div>
         </div>
       </div>
       
