--- a/story.html
+++ b/story.html
@@ -35,14 +35,66 @@
       <!-- JS se render karenge blog here-->
     </article>
   </main>
-
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-white py-12 mt-16">
-    <div class="container mx-auto px-4 text-center">
-      <h3 class="text-xl font-bold mb-2">TravelTales</h3>
-      <p class="text-gray-400">Share your journey, inspire others.</p>
-    </div>
-  </footer>
+    <!-- Footer hai -->
+    <footer class="bg-gray-800 text-white py-12 mt-16">
+      <div class="container mx-auto px-4">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+          <div>
+            <h3 class="text-xl font-bold mb-4">TravelTales</h3>
+            <p class="text-gray-400">Share your journey, inspire others.</p>
+          </div>
+          <div>
+            <h4 class="font-bold mb-4">Quick Links</h4>
+            <ul class="space-y-2">
+              <li>
+                <a href="about.html" class="text-gray-400 hover:text-white"
+                  >About Us</a
+                >
+              </li>
+              <li>
+                <a href="contact.html" class="text-gray-400 hover:text-white"
+                  >Contact</a
+                >
+              </li>
+              <li>
+                <a href="privacy.html" class="text-gray-400 hover:text-white"
+                  >Privacy Policy</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h4 class="font-bold mb-4">Follow Us</h4>
+            <div class="flex space-x-4">
+              <a href="#" class="text-2xl hover:text-orange-500"
+                ><i class="bi bi-facebook"></i
+              ></a>
+              <a href="#" class="text-2xl hover:text-orange-500"
+                ><i class="bi bi-twitter"></i
+              ></a>
+              <a href="#" class="text-2xl hover:text-orange-500"
+                ><i class="bi bi-instagram"></i
+              ></a>
+            </div>
+          </div>
+          <div>
+            <h4 class="font-bold mb-4">Newsletter</h4>
+            <form class="flex flex-col space-y-2">
+              <input
+                type="email"
+                placeholder="Your email"
+                class="px-4 py-2 rounded-lg text-gray-800"
+              />
+              <button
+                class="bg-orange-500 hover:bg-orange-600 px-4 py-2 rounded-lg"
+              >
+                Subscribe
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
   <script src="public/js/navigation.js"></script>
 </body>
 
